--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
                         <input type="text" class="search-field" placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}">
                     </div>
 
-                    <button class="btn search-btn px-4" routerLink="search">{{ 'SEARCH_BUTTON' | translate }}</button>
+                    <button class="btn search-btn px-4" routerLink="/search">{{ 'SEARCH_BUTTON' | translate }}</button>
                 </div>
             </div>
 
