--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -46,7 +46,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top border-bottom">
-  <div class="container-fluid" style="width:70%">
+  <div class="container-fluid navbar-layout-width" style="width:75%">
 
     <button class="mobile-toggle d-lg-none" (click)="toggleSidebar()">
         <i class="fas fa-bars"></i>
@@ -64,7 +64,7 @@
 
     <div class="nav-actions d-flex align-items-center">
 
-      <button class="btn btn-outline-secondary btn-sm lang-btn" (click)="toggleLanguage()">
+      <button class="btn btn-outline-secondary btn-sm lang-btn" (click)="toggleLanguage()">  
        <i class="fas fa-globe me-1"></i>  {{ 'GLOBE' | translate }}
       </button>
 
