--- a/src/app/components/ai-assistant/ai-assistant.component.css
+++ b/src/app/components/ai-assistant/ai-assistant.component.css
@@ -147,11 +147,6 @@
     color: #F8FAFB;
 }
 
-/* .upload-btn:hover,
-.send-btn:hover {
-    color: #4e8fff;
-} */
-
 .chat-input {
     border: 1px solid #d9d9d9;
     border-radius: 14px;
@@ -162,6 +157,100 @@
 .chat-input:focus {
     outline: none;
     box-shadow: none;
+}
+
+.mic-btn {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    background: #EFF6FF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: 0.3s ease;
+    border: 1px solid #d9d9d9;
+    color: #312f2f;
+}
+
+.mic-btn:hover {
+    background: #d7e8ff;
+    transform: scale(1.05);
+}
+.mic-btn:active {
+    transform: scale(0.95);
+}
+
+
+.chat-messages {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    max-height: 530px;
+    height: 530px;
+}
+
+.message {
+    max-width: 75%;
+    padding: 10px 14px;
+    border-radius: 12px;
+    font-size: 15px;
+    line-height: 20px;
+    word-wrap: break-word;
+      background-color: rgb(224, 222, 222);
+}
+
+.user-msg {
+    align-self: flex-end;
+    background: #155DFC;
+    color: white;
+}
+
+.typing-loader {
+    display: flex;
+    gap: 6px;
+    align-items: center;
+    justify-content: flex-start;
+    padding:  15px 20px ;
+    border-radius: 10px;
+}
+
+.typing-loader span {
+    
+    width: 10px;
+    height: 10px;
+    background-color: #312f2f;
+    border-radius: 50%;
+    display: inline-block;
+    animation: typingZoom 1.4s infinite ease-in-out;
+}
+
+.typing-loader span:nth-child(1) {
+    animation-delay: 0s;
+}
+.typing-loader span:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.typing-loader span:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+@keyframes typingZoom {
+    0% {
+        transform: scale(0.4);
+        opacity: 0.4;
+    }
+    50% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(0.4);
+        opacity: 0.4;
+    }
 }
 
 
@@ -233,86 +322,3 @@
     }
 }
 
-
-.chat-messages {
-    flex: 1;
-    overflow-y: auto;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    max-height: 530px;
-    height: 530px;
-}
-
-.message {
-    max-width: 75%;
-    padding: 10px 14px;
-    border-radius: 12px;
-    font-size: 15px;
-    line-height: 20px;
-    word-wrap: break-word;
-      background-color: rgb(224, 222, 222);
-}
-
-.user-msg {
-    align-self: flex-end;
-    background: #155DFC;
-    color: white;
-}
-
-/* .bot-msg {
-    align-self: flex-start;
-    background: #F3F4F6;
-    color: #111;
-}
-
-.typing .msg-text {
-    font-style: italic;
-    opacity: 0.6;
-} */
-
-.typing-loader {
-    display: flex;
-    gap: 6px;
-    align-items: center;
-    justify-content: flex-start;
-    padding:  15px 20px ;
-    border-radius: 10px;
-    /* background-color: rgb(250, 250, 250); */
-}
-
-.typing-loader span {
-    
-    width: 10px;
-    height: 10px;
-    background-color: #312f2f;
-    border-radius: 50%;
-    display: inline-block;
-    animation: typingZoom 1.4s infinite ease-in-out;
-}
-
-.typing-loader span:nth-child(1) {
-    animation-delay: 0s;
-}
-.typing-loader span:nth-child(2) {
-    animation-delay: 0.2s;
-}
-.typing-loader span:nth-child(3) {
-    animation-delay: 0.4s;
-}
-
-@keyframes typingZoom {
-    0% {
-        transform: scale(0.4);
-        opacity: 0.4;
-    }
-    50% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(0.4);
-        opacity: 0.4;
-    }
-}
