feat: Enhance AI Assistant and Document Generation Features
- Updated AI Assistant component to include a responsive textarea for user input, with auto-resizing functionality.
- Improved user experience by resetting the textarea after sending a message.
- Added new document generation templates for Commercial Contracts and NDAs, with corresponding input fields.
- Enhanced styling for better alignment and responsiveness across devices.
- Implemented search functionality in the Regulations component with category filtering.
- Updated translations for new features and improved existing ones.
- Refactored CSS for better layout and responsiveness in various components.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,12 @@
 .layout-container {
   width: 75%;
 }
+@media (max-width:1440.2px) {
+  .layout-container{
+    width: 80%;
+  }
+  
+}
 @media (max-width: 1399px) {
   .main-content-main {
     margin-left: 230px;
@@ -27,7 +33,7 @@
     margin-left: 200px;
   }
   .layout-container{
-    width: 85%;
+    width: 90%;
   }
 }
 
@@ -40,9 +46,11 @@
 @media (max-width: 768px) {
   .main-content-main {
     margin-left: 0;
-    padding: 20px 5px;
+    padding-bottom: 20px;
   }
-  
+  .layout-container{
+    width: 100%;
+  }
 
   .main-content-main.sidebar-collapsed {
     margin-left: 0 !important;
