--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -107,7 +107,7 @@
                             <img src="assets/Images/Icon (7).svg" alt="">
                         </div>
 
-                        <h6 class="recom-text mb-3">{{'RECOMMEND_1_TITLE' | translate }}</h6>
+                        <h6 class="recom-text mb-md-3">{{'RECOMMEND_1_TITLE' | translate }}</h6>
                         <p class="recom-desc">{{'RECOMMEND_1_DESC' | translate }}</p>
                     </div>
                 </div>
@@ -118,18 +118,18 @@
                             <img src="assets/Images/Icon (8).svg" alt="">
                         </div>
 
-                        <h6 class="recom-text mb-3">{{'RECOMMEND_2_TITLE' | translate }}</h6>
+                        <h6 class="recom-text mb-md-3">{{'RECOMMEND_2_TITLE' | translate }}</h6>
                         <p class="recom-desc">{{'RECOMMEND_2_DESC' | translate }}</p>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-4">
-                    <div class="recommend-card purple-card p-3">
+                    <div class="recommend-card purple-card p-3 ">
                         <div class="icon-box purple-icon mb-3">
                             <img src="assets/Images/Icon (9).svg" alt="">
                         </div>
 
-                        <h6 class="recom-text mb-3">{{'RECOMMEND_3_TITLE' | translate }}</h6>
+                        <h6 class="recom-text mb-md-3">{{'RECOMMEND_3_TITLE' | translate }}</h6>
                         <p class="recom-desc">{{'RECOMMEND_3_DESC' | translate }}</p>
                     </div>
                 </div>
