--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -226,6 +226,20 @@
   }
 }
 
+
+@media (max-width: 399px) {
+.navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
+    display:inline-flex;
+    flex-wrap: inherit;
+    align-items: center;
+    justify-content:normal;
+}
+    .navbar-layout-width {
+        width: 100% !important;
+    }
+}
+
+
 /* ============== RTL FIX ============== */
 html.rtl .brand-text {
   margin-inline-start: 0;
