--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -8,7 +8,7 @@
     </a>
   </div>
 </div> -->
-<div class="search-card container pt-4">
+<!-- <div class="search-card container pt-4">
   <div class="card shadow-sm border-0 rounded-4 p-4">
 
     <h5 class="fw-semibold mb-3">Search</h5>
@@ -49,6 +49,48 @@
     <div class="mt-3">
       <button class="btn btn-outline-success d-flex align-items-center gap-2">
         <i class="bi bi-funnel"></i> Filter
+      </button>
+    </div>
+
+  </div>
+</div> -->
+
+
+<div class="search-card container pt-4">
+  <div class="card shadow-sm border-0 rounded-4 p-4">
+
+    <h5 class="fw-semibold mb-3">{{ 'SEARCH_TITLE' | translate }}</h5>
+
+    <ul class="nav nav-pills mb-3 gap-2 search-tabs">
+      <li class="nav-item">
+        <button class="nav-link" [class.active]="searchType === 'keyword'" (click)="searchType = 'keyword'">
+          {{ 'KEYWORD_SEARCH' | translate }}
+        </button>
+      </li>
+
+      <li class="nav-item">
+        <button class="nav-link" [class.active]="searchType === 'semantic'" (click)="searchType = 'semantic'">
+          {{ 'SEMANTIC_SEARCH' | translate }}
+        </button>
+      </li>
+    </ul>
+
+    <div class="d-flex flex-column flex-md-row align-items-start align-items-md-center gap-3 mt-3">
+
+      <div class="position-relative flex-grow-1 w-100">
+        <i class="bi bi-search search-icon"></i>
+        <input type="text" class="form-control search-input" [placeholder]="'SEARCH_PLACEHOLDER_FOR_SEARCH' | translate"
+          [(ngModel)]="query">
+      </div>
+
+      <button class="btn btn-success px-4 search-btn">
+        {{ 'SEARCH_BUTTON_FOR_SEARCH' | translate }}
+      </button>
+    </div>
+
+    <div class="mt-3">
+      <button class="btn btn-outline-success d-flex align-items-center gap-2">
+        <i class="bi bi-funnel"></i> {{ 'FILTER_BUTTON' | translate }}
       </button>
     </div>
 
